FIX footer alignment and bg colour

--- a/docassemble/LLAW33012020S2P06/data/static/CLCSA_CSS_Website.css
+++ b/docassemble/LLAW33012020S2P06/data/static/CLCSA_CSS_Website.css
@@ -164,14 +164,18 @@ li {
 }
 
 footer.dafooter {
-  height: 85px !important;
+  height: 120px !important;
+  background-color: inherit !important;
 }
 footer.dafooter > div.container {
   height: 100% !important;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 body.da-pad-for-footer {
-  margin-bottom: 80px !important;
+  margin-bottom: 120px !important;
 }
 
 @media only screen and (max-width: 340px) {
